crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_dock_wraps_long_commit.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 34)"
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ▜▒▟███▙▒▛  cohors  vX.Y.Z                         │  dir    (demo)                              │
│ ▟██▌█▐██▙  All your git repositories at a glance   │  config (demo)                              │
│ ▀▐▖▀█▀▗▌▀  status · fetch · pull · weekly standup  │  active 1w                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention (1 of 1 repositories) ─────────────────────────────────────────────────────────────────╮
│ 1 unpushed (1 aging)                                                                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositories (1) · sort: dirty-first ────────────────────────────────────────────────────────────╮
│    Repo              Branch         Sync  Changes  Stash  PRs    CI     Last  Status             │
│▌   load-tester       main           ↑1    0        0      local  local    1w  ↑1 unpushed · aging│
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│ load-tester  ·  main ──────────────────────────────────────────────────────── Enter: full detail │
│                                                                                                  │
│ Changes      clean                                                                               │
│ Stash        none                                                                                │
│ Upstream     1 ahead  (origin/main)                                                              │
│ Remote       no GitHub remote                                                                    │
│ Last commit  1w ago — chore: add load-test harnesses (mock origin, HTTP load driver, quota-RPC   │
│              pgbench) + ignore results and refresh the CI perf matrix                            │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────── press h to hide hints ───────────────────────────────────────
╭───────────────────────────────╮ ╭──────────────────────────────╮ ╭───────────────────────────────╮
│            select             │ │              ac→ load-tester │ │             view              │
│ ───────────────────────────── │ │ ──────────────────────────── │ │ ───────────────────────────── │
│ a mark all    │ Esc clear     │ │ ⏎ open        │ P push       │ │ ↑/↓ move      │ ? help        │
│ / filter      │               │ │ f fetch       │ S stash      │ │ s sort        │ q quit        │
│ ───────────────────────────── │ │ p pull        │              │ │ ───────────────────────────── │
│ Space mark repo               │ │ ──────────────────────────── │ │ d dirty-only                  │
│                               │ │ ! run command                │ │ Tab standup                   │
╰───────────────────────────────╯ ╰──────────────────────────────╯ ╰───────────────────────────────╯
