crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_empty.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 12)"
---
╭ cohors vX.Y.Z ──────────────────────────────────────────────────────0 repos · sort: dirty-first ╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
                                                                                                    
                                No git repos found under: ~/projects                                
                                                                                                    
                     Run `cohors init` to create a config, or pass --root <dir>.                    
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ select Space mark repo · a mark all · / filter · Esc clear                                       │
│ act    ⏎ open · f fetch · p pull · ! run command · S stash                                       │
│ view   ↑/↓ move · s sort · d dirty-only · Tab standup · ? help · q quit                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
