crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_filtered.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 20)"
---
╭ cohors vX.Y.Z ─────────────────────────────────────────────────────2/5 repos · sort: dirty-first ╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
/ pay▏                                                                                              
╭ Repositories (2) ────────────────────────────────────────────────────────────────────────────────╮
│  Repo                Branch         Sync     Changes  Stash  Remote  Last commit                 │
│                                                                                                  │
│▌   payments          main           ↑2       4        1      ● 2pr    2h  fix: retry on 5xx      │
│    legacy-billing    error          ·        ·        ·      ·       could not read .git (permiss│
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ filter type to filter · ⏎ apply · Esc clear                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
