crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_footer_compact.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 56, 22)"
---
╭ cohors vX.Y.Z ───────────────────────────────────── ╮
│ All your git repositories at a glance — status, fetc │
╰──────────────────────────────────────────────────────╯
╭ Attention (4 of 5 repositories) ─────────────────────╮
│ 1 unpushed · 1 behind · 3 dirty · 1 stashed · 1 unre │
╰──────────────────────────────────────────────────────╯
╭ Repositories (5) · sort: dirty-first ────────────────╮
│    Repo            Branch         Sync      Changes  │
│                                                      │
│▌   legacy-billing  error          ·         ·        │
│    payments        main           ↑2 ● 2pr  4 s1     │
│    web-app         feat/checkout  ↓5 ●      7        │
╰──────────────────────────────────────────────────────╯
──────────────── press h to hide hints ─────────────────
╭ select ────────╮ ╭ act ───────────╮ ╭ view ──────────╮
│Space mark repo │ │⏎ open          │ │↑/↓ move        │
│a mark all      │ │f fetch         │ │s sort          │
│/ filter        │ │p pull          │ │d dirty-only    │
│Esc clear       │ │! run command   │ │Tab standup     │
│                │ │S stash         │ │? help          │
│                │ │                │ │q quit          │
╰────────────────╯ ╰ legacy-billing ╯ ╰────────────────╯
