crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_header_compact.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 60, 16)"
---
╭──────────────────────────────────────────────────────────╮
│ ▜▒▟███▙▒▛  cohors  vX.Y.Z                               │
│ ▟██▌█▐██▙  ~/projects (+1)                               │
│ ▀▐▖▀█▀▗▌▀                                                │
╰──────────────────────────────────────────────────────────╯
╭ Attention (4 of 5 repositories) ─────────────────────────╮
╰──────────────────────────────────────────────────────────╯
────────────────── press h to hide hints ───────────────────
╭─────────────────╮ ╭──────────────────╮ ╭─────────────────╮
│ select          │ │ act              │ │ view            │
│ a mark │ Esc cl │ │ ⏎ open  │ P push │ │ ↑/↓ mo │ ? help │
│ / filt │        │ │ f fetch │ S stas │ │ s sort │ q quit │
│ ─────────────── │ │ p pull  │        │ │ ─────────────── │
│ Space mark repo │ │ ──────────────── │ │ d dirty-only    │
│                 │ │ ! run command    │ │ Tab standup     │
╰─────────────────╯ ╰ → legacy-billing ╯ ╰─────────────────╯
