crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_help.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 92, 28)"
---
┌ cohors ──────────────────────────────────────────────────────5 repos · sort: dirty-first ┐
│  Repo                 Branch             ↑/↓      Dirty        Stash Last commit         │
│▌ legacy-billing       ⚠ could not read .                                                 │
│  payments      ┌ Help ──────────────────────────────────────────────────┐fix: retry on 5x│
│  web-app       │Navigation                                              │ wip: cart drawe│
│  infra         │  ↑ / ↓           move selection                        │build: pin ci im│
│  auth-service  │  Home / End      top / bottom                          │chore: bump deps│
│                │                                                        │                │
│                │View                                                    │                │
│                │  /               fuzzy filter (Esc clears)             │                │
│                │  d               toggle dirty-only                     │                │
│                │  s               cycle sort mode                       │                │
│                │                                                        │                │
│                │Actions                                                 │                │
│                │  ⏎               open in editor                        │                │
│                │  o               reveal in file manager                │                │
│                │  f / F           fetch selected / all                  │                │
│                │  p               pull (fast-forward only)              │                │
│                │  L               open in lazygit                       │                │
│                │  y               copy path to clipboard                │                │
│                │                                                        │                │
│                │App                                                     │                │
│                │  r               refresh (re-scan)                     │                │
│                │  ?               toggle this help                      │                │
│                └────────────────────────────────────────────────────────┘                │
│                                                                                          │
│                                                                                          │
└ ? / Esc close ───────────────────────────────────────────────────────────────────────────┘
