crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_hints_hidden.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 20)"
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ▜▒▟███▙▒▛  cohors  vX.Y.Z                         │  dir    ~/projects (+1)                     │
│ ▟██▌█▐██▙  All your git repositories at a glance   │  config ….config/cohors/config.toml         │
│ ▀▐▖▀█▀▗▌▀  status · fetch · pull · weekly standup  │  active 20m                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention (4 of 5 repositories) ─────────────────────────────────────────────────────────────────╮
│ 1 unpushed · 1 behind · 3 dirty · 1 stashed · 1 unreadable                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositories (5) · sort: dirty-first ────────────────────────────────────────────────────────────╮
│    Repo              Branch         Sync  Changes  Stash  PRs  CI       Last  Status             │
│▌   legacy-billing    error          ·     ·        ·      ·    ·        ·     could not read .gi…│
│    payments          main           ↑2    4        1      2    passing    2h  ↑2 unpushed        │
│    web-app           feat/checkout  ↓5    7        ·      ·    failing   20m  ↓5 behind — pull   │
│    infra             @a1b2c3d       —     4        ·      —    —          1w  4 uncommitted chan…│
│    auth-service      main           —     ·        ·      1    pending    3d  ·                  │
│ legacy-billing  ·  unborn ─────────────────────────────────────────────────── Enter: full detail │
│                                                                                                  │
│ ⚠ could not read .git (permission denied)                                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
───────────────────────────────────── press h to unhide hints ──────────────────────────────────────
