crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_loading.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 12)"
---
╭ cohors vX.Y.Z ──────────────────────────────────────────────────────────────────────────────────╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
                                       ⠋ Scanning ~/projects…                                       
────────────────────────────────────── press h to hide hints ───────────────────────────────────────
╭ select ───────────────────────╮ ╭ act ─────────────────────────╮ ╭ view ─────────────────────────╮
│a mark all     │Esc clear      │ │⏎ open         │P push        │ │↑/↓ move       │? help         │
│/ filter       │               │ │f fetch        │S stash       │ │s sort         │q quit         │
│───────────────────────────────│ │p pull         │              │ │───────────────────────────────│
│Space mark repo                │ │──────────────────────────────│ │d dirty-only                   │
│                               │ │! run command                 │ │Tab standup                    │
╰───────────────────────────────╯ ╰──────────────────────────────╯ ╰───────────────────────────────╯
