crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_multiselect.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 20)"
---
╭ cohors vX.Y.Z ───────────────────────────────────────────────────────────────────────2 selected ╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention (4 of 5 repositories) ─────────────────────────────────────────────────────────────────╮
│ 1 unpushed · 1 behind · 3 dirty · 1 stashed · 1 unreadable                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositories (5) · sort: dirty-first ────────────────────────────────────────────────────────────╮
│    Repo              Branch         Sync      Changes  Last commit                               │
│                                                                                                  │
│▌   legacy-billing    error          ·         ·        could not read .git (permission denied)   │
│  ● payments          main           ↑2 ● 2pr  4 s1      2h  fix: retry on 5xx                    │
│                                            … 3 more ↓                                            │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────── press h to hide hints ───────────────────────────────────────
╭ select ───────────────────────╮ ╭ act ─────────────────────────╮ ╭ view ─────────────────────────╮
│Space mark repo                │ │⏎ open          P push        │ │↑/↓ move        Tab standup    │
│a mark all                     │ │f fetch         ! run command │ │s sort          ? help         │
│/ filter                       │ │p pull          S stash       │ │d dirty-only    q quit         │
│Esc clear                      │ │                              │ │                               │
╰───────────────────────────────╯ ╰──────────────── → 2 selected ╯ ╰───────────────────────────────╯
